@@ -7,13 +7,14 @@
 # http://www.cybop.net
 # - Cybernetics Oriented Programming -
 #
-# @version $Revision: 1.33 $ $Date: 2008-04-23 22:47:59 $ $Author: christian $
+# @version $Revision: 1.34 $ $Date: 2008-04-25 23:07:26 $ $Author: christian $
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
 
-        * continue in module "checker.c" function "check_interrupts";
-            make sure that all values are properly assigned!
-            everything before, i.e. up to this function works fine.
+        * example application "ui_control" works with at least "exit" operation
+            in knowledge file "handle_gnu_linux_console.cybol"
+        * check if "receive" operation works fine for gnu_linux_console,
+            as there seems to be some bug or problem (possibly entered characters are not recognised correctly)
 
         * Set "receive" model in internal memory to NULL in "interrupt" (stop sensing) function,
             but do NOT destroy, since it belongs to the knowledge model tree
